
@startuml matcher_structure
!include _skin_settings.iuml

' skinparam Linetype ortho

' ******************************************************************************

interface TextIOInterface

class TextIO implements TextIOInterface
{
    - **TextstreamInterface?** _ts
}
TextIO *-- TextstreamInterface

' ******************************************************************************

enum TextstreamType
{
    * MEMORY
    * DISK
}

interface TextstreamInterface
{
    + {abstract} **string** get_buffer()
    + {abstract} **int** get_buffer_position()
    + {abstract} **int** get_buffer_size()
}
TextstreamInterface -up-> TextstreamType

abstract class TextstreamBase implements TextstreamInterface
{
    - **string** _buffer
    - **int** _buffer_position
    - **int** _buffer_size
___
    + **string** get_buffer()
    + **int** get_buffer_position()
    + **int** get_buffer_size()
}

class TextstreamDisk   extends TextstreamBase
class TextstreamMemory extends TextstreamBase

' ******************************************************************************

interface LexerInterface extends TextIOInterface

abstract class LexerBase implements LexerInterface
abstract class LexerBase extends    TextIO
abstract class LexerBase
{
    - **List<Ruleset>** _rulesets
}

LexerBase "1" o-r- "0..*" Ruleset : "     "

class Lexer <<implementation>> extends LexerBase

' ******************************************************************************

interface MatcherInterface
{
    + {abstract} **string** get_implementation_id()
    + {abstract} **void** compile_pattern()
    + {abstract} **bool** match()
}

note as n1
    Lexer passes its ""TextstreamInterface""
    instance ""_ts"" to ""match()"" so
    matchers can access and use
    the string buffer variables.
endnote

MatcherInterface::match <.. n1
TextstreamBase .right. n1



abstract class MatcherBase implements MatcherInterface
{
    - {abstract} **string** _implementation_id
___
    + {abstract} **string **get_implementation_id()
}


class Matcher <<implementation>> extends MatcherBase
{
    - //**CompiledRegex** _re//
___
    + **void** compile_pattern()
    + **bool** match()
}

note left of Matcher::_re
    A ""Matcher"" implementation stores a compiled regex
    pattern using a regex engine of choice.
     ● The regex pattern string is passed down from
       ""Rule"" as argument to ""compile_pattern()"".
     ● ""match()"" will call the compiled regex pattern
       instance to try and match a token.
endnote


class Rule
{
    + **str** regex
    - **MatcherInterface?** _matcher
___
    + **MatcherInterface?** get_matcher()
    + **void** set_matcher()
}
Rule "1 " *-down- "0..1 " MatcherInterface


class Ruleset <<typedef>> {
    **List<Rule>**
}

Ruleset "1 " o-down- "0..* " Rule

' ******************************************************************************

class Token

Lexer --> Token
MatcherInterface <-left- Token

' ******************************************************************************

@enduml
